# desafio_iclinic

./: .gitignore  LICENSE  README.md  README.rst  docker-compose.yml
appointment/: README.rst  requirements.txt
appointment/api/: core_data.json  serializers.py  tasks.py  urls.py  views.py
appointment/api/tests/: test_api.py  test_tasks.py
appointment/app/: celery.py  settings.py
charge/: Dockerfile  README.rst  requirements.txt
charge/api/: serializers.py  urls.py  views.py
charge/api/tests/: test_api.py
charge/app/: settings.py  urls.py
flower/: Dockerfile  requirements.txt
iclinic-core_model/: README.rst  requirements.txt  setup.cfg
iclinic-core_model/app/: settings.py
iclinic-core_model/core_model/: admin.py  models.py
iclinic-core_model/core_model/migrations/: 0001_initial.py
iclinic-core_model/core_model/tests/: base.py  test_admin.py  test_models.py
