[metadata]
name = iclinic-core_model
version = 0.1
description = A Django app to conduct Web-based core_model.
long_description = file: README.rst
url = https://github.com/andreclimaco/desafio_iclinic
author = André Clímaco
author_email = andre.climaco@gmail.com
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2.4

[options.packages.find]
exclude =
    app
